unpackaged/main/default/objects/Pricebook2/fields/Procentaje_Precio_lado_sol__c.field-meta.xml
<CustomField>
    <fullName>Procentaje_Precio_lado_sol__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>%Precio lado sol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>