unpackaged/main/default/objects/Pricebook2/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prototipo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Prototipo__c.Fraccionamiento__c</field>
            <operation>equals</operation>
            <valueField>$Source.Fraccionamiento__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prototipo__c</referenceTo>
    <relationshipLabel>Listas de precios</relationshipLabel>
    <relationshipName>Listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>