unpackaged/main/default/objects/Pricebook2/fields/Relacion_Precio_Producto__c.field-meta.xml
<CustomField>
    <fullName>Relacion_Precio_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relación Precio Producto</label>
    <referenceTo>Relacion_Precios_Producto__c</referenceTo>
    <relationshipLabel>Listas de precios</relationshipLabel>
    <relationshipName>Listas_de_precios</relationshipName>
    <type>Lookup</type>
</CustomField>