unpackaged/main/default/objects/Pricebook2/fields/Solicitar_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_Aprobaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitar Aprobación</label>
    <type>Checkbox</type>
</CustomField>