unpackaged/main/default/objects/Pricebook2/fields/Solicitd_de_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Solicitd_de_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitd de Aprobación</label>
    <type>Checkbox</type>
</CustomField>