unpackaged/main/default/objects/Pricebook2/fields/Sub_UEN_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Sub_UEN_Aprobaciones__c</fullName>
    <formula>Fraccionamiento__r.UEN_Sub_Aprobaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN Sub Aprobaciones</label>
    <type>Text</type>
</CustomField>