unpackaged/main/default/objects/Pricebook2/fields/Superficie_excedente__c.field-meta.xml
<CustomField>
    <fullName>Superficie_excedente__c</fullName>
    <label>Superficie excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>