unpackaged/main/default/objects/Pricebook2/fields/Tipo_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Bonificacion__c</fullName>
    <label>Tipo de Bonificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bonificación de contado</fullName>
            </value>
            <value>
                <fullName>Bonificación de mes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>