unpackaged/main/default/objects/Pricebook2/fields/Tipo_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Financiamiento__c</fullName>
    <label>Tipo de Financiamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enganche</fullName>
            </value>
            <value>
                <fullName>Post-Venta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>