unpackaged/main/default/objects/Pricebook2/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complementos</fullName>
            </value>
            <value>
                <fullName>Otos gastos</fullName>
            </value>
            <value>
                <fullName>Casa muestra</fullName>
            </value>
            <value>
                <fullName>Promoción de Venta</fullName>
            </value>
            <value>
                <fullName>Bonificación</fullName>
            </value>
            <value>
                <fullName>Financiamiento</fullName>
            </value>
            <value>
                <fullName>Paquete</fullName>
            </value>
            <value>
                <fullName>Promoción de Precio</fullName>
            </value>
            <value>
                <fullName>Regalo de Marketing</fullName>
            </value>
            <value>
                <fullName>Vivienda</fullName>
            </value>
            <value>
                <fullName>Productos Genéricos</fullName>
            </value>
            <value>
                <fullName>Otros Gastos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>