unpackaged/main/default/objects/Pricebook2/fields/Tipo_Lista__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Lista__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Lista</label>
    <type>Text</type>
</CustomField>