unpackaged/main/default/objects/Pricebook2/fields/UEN_APROBACIONES__c.field-meta.xml
<CustomField>
    <fullName>UEN_APROBACIONES__c</fullName>
    <formula>Fraccionamiento__r.Plaza_Relacionada__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN APROBACIONES</label>
    <type>Text</type>
</CustomField>