unpackaged/main/default/objects/Pricebook2/fields/ValidationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>ValidationBypassDateTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>ValidationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>