unpackaged/main/default/objects/Pricebook2/fields/Vigente_Desde__c.field-meta.xml
<CustomField>
    <fullName>Vigente_Desde__c</fullName>
    <label>Vigente Desde</label>
    <type>Date</type>
</CustomField>