unpackaged/main/default/objects/Pricebook2/fields/Vigente_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Vigente_Hasta__c</fullName>
    <label>Vigente Hasta</label>
    <type>Date</type>
</CustomField>