unpackaged/main/default/objects/Pricebook2/recordTypes/Bonificacion.recordType-meta.xml
<RecordType>
    <fullName>Bonificacion</fullName>
    <active>true</active>
    <label>Bonificación</label>
</RecordType>