unpackaged/main/default/objects/Pricebook2/recordTypes/Complementos.recordType-meta.xml
<RecordType>
    <fullName>Complementos</fullName>
    <active>false</active>
    <label>Complementos</label>
</RecordType>