unpackaged/main/default/objects/Pricebook2/recordTypes/Financiamiento.recordType-meta.xml
<RecordType>
    <fullName>Financiamiento</fullName>
    <active>true</active>
    <label>Financiamiento</label>
</RecordType>