unpackaged/main/default/objects/Pricebook2/recordTypes/Paquete.recordType-meta.xml
<RecordType>
    <fullName>Paquete</fullName>
    <active>true</active>
    <label>Paquete</label>
</RecordType>