unpackaged/main/default/objects/Pricebook2/recordTypes/Producto_Generico.recordType-meta.xml
<RecordType>
    <fullName>Producto_Generico</fullName>
    <active>true</active>
    <label>Producto Genérico</label>
</RecordType>