unpackaged/main/default/objects/Pricebook2/recordTypes/Promocion_Precio.recordType-meta.xml
<RecordType>
    <fullName>Promocion_Precio</fullName>
    <active>true</active>
    <label>Promoción Precio</label>
</RecordType>