unpackaged/main/default/objects/Pricebook2/recordTypes/Promocion_Venta.recordType-meta.xml
<RecordType>
    <fullName>Promocion_Venta</fullName>
    <active>true</active>
    <label>Promoción Venta</label>
</RecordType>