unpackaged/main/default/objects/Pricebook2/recordTypes/Regalo_MKT.recordType-meta.xml
<RecordType>
    <fullName>Regalo_MKT</fullName>
    <active>true</active>
    <label>Regalo MKT</label>
</RecordType>