unpackaged/main/default/objects/Pricebook2/validationRules/Cantidad_mayor_a_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Cantidad_mayor_a_0</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &#39;Promoción Precio&#39;,
NOT(ISNULL( Cantidad__c )),
Ilimitado__c
)</errorConditionFormula>
    <errorDisplayField>Cantidad__c</errorDisplayField>
    <errorMessage>Si la casilla de &quot;Ilimitado&quot; esta llena, el campo de cantidad debe estar en blanco.</errorMessage>
</ValidationRule>