unpackaged/main/default/objects/Pricebook2/validationRules/Descripcion_es_Campo_Obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Descripcion_es_Campo_Obligatorio</fullName>
    <active>true</active>
    <description>El campo de Descripción es Obligatorio</description>
    <errorConditionFormula>ISBLANK(Description)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Debe ingresar la descripción del producto.</errorMessage>
</ValidationRule>