unpackaged/main/default/objects/Pricebook2/validationRules/Finaciamiento_Porcentaje_y_Monto_Vacios.validationRule-meta.xml
<ValidationRule>
    <fullName>Finaciamiento_Porcentaje_y_Monto_Vacios</fullName>
    <active>true</active>
    <description>Regla que valida que ambos campos no pueden estar vacios al mismo tiempo</description>
    <errorConditionFormula>AND(RecordType.Name = &quot;Financiamiento&quot;, 
				ISBLANK(Porcentaje_Fianciamiento__c),  
				ISBLANK(Importe_Financiamiento__c))</errorConditionFormula>
    <errorMessage>Los campoos de Importe de Financiamiento y Porcentaje de Financiemiento, no pueden estar en blanco al mismo tiempo.Favor de verificar.</errorMessage>
</ValidationRule>