unpackaged/main/default/objects/Pricebook2/validationRules/Lista_ya_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Lista_ya_aprobada</fullName>
    <active>true</active>
    <description>No se puede solicitar aprobación cuando ya está aprobada</description>
    <errorConditionFormula>AND(Solicitd_de_Aprobacion__c, ISPICKVAL(Estatus__c , &quot;Aprobado&quot;))</errorConditionFormula>
    <errorMessage>No se puede solicitar aprobación de un registro ya aprobado</errorMessage>
</ValidationRule>