unpackaged/main/default/objects/Pricebook2/validationRules/No_Modifica_listas_Admon_Ventas.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Modifica_listas_Admon_Ventas</fullName>
    <active>true</active>
    <description>Regla de Validación para que el Administrador de Venta no pueda modificar niguna lista de Regalos MKT, Paquete, Genrpericos y Promo Venta</description>
    <errorConditionFormula>AND(
 $Profile.Name = &quot;Administrador de Ventas&quot;,
OR( RecordType.Name = &quot;Regalo MKT&quot;,
			 RecordType.Name = &quot;Paquete&quot;,
			 RecordType.Name = &quot;Producto Genérico&quot;,
			 RecordType.Name = &quot;Promoción Venta&quot;
				),
OR(
ISCHANGED(Estatus__c),
ISCHANGED(Ilimitado__c),
ISCHANGED(Name),
ISCHANGED(Description),
ISCHANGED(Estatus_Proceso_de_Venta__c),
ISCHANGED(Prototipo__c),
ISCHANGED(Periodo_Fin__c),
ISCHANGED(Periodo_Inicio__c),
ISCHANGED(Precio_Min_Solicitado__c),
ISCHANGED(Fraccionamiento__c),
ISCHANGED(Vigente_Desde__c),
ISCHANGED(Vigente_Hasta__c),
ISCHANGED(Cantidad__c),
ISCHANGED(Precio_Min_Autorizado__c)
)
)</errorConditionFormula>
    <errorMessage>No cuenta con los permisos necesarios para modificar esta lista de Precios,</errorMessage>
</ValidationRule>