unpackaged/main/default/objects/Pricebook2/validationRules/No_Modifica_listas_Por_Aprobar.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Modifica_listas_Por_Aprobar</fullName>
    <active>true</active>
    <description>Regla de Validación para que ningun prefil pueda modificar una lista que esta en proceso de aprobación</description>
    <errorConditionFormula>IF($Profile.Name = &quot;Mercadotecnia Corporativo&quot;, False,   
   AND(
       NOT(ISCHANGED(ValidationBypassDateTime__c)), 
				   No_Modificable__c, 
       OR(ISCHANGED(Name),
          ISCHANGED(Solicitar_Aprobaci_n__c),
          ISCHANGED(Fraccionamiento__c),
          ISCHANGED(Prototipo__c),
          ISCHANGED(Tipo_de_Producto__c),
          ISCHANGED(Tipo_de_Financiamiento__c),
          ISCHANGED(Tipo_de_Bonificacion__c),
          ISCHANGED(Clase_de_Financiamiento__c),
          ISCHANGED(Clase_de_Bonificacion__c),
          ISCHANGED(Importe_Financiamiento__c),
          ISCHANGED(Monto_Bonificacion__c),
          ISCHANGED(Porcentaje_Fianciamiento__c),
          ISCHANGED(Porcentaje_Bonificacion__c),
          ISCHANGED(Plazos__c),
          ISCHANGED(Description),
          ISCHANGED(Precio_Lista__c),
          ISCHANGED(Precio_Instalaciones__c),
          ISCHANGED(Precio_esquina__c),
          ISCHANGED(Precio_frente_area_municipal__c),
          ISCHANGED(Precio_frente_a_praque__c),
          ISCHANGED(Precio_lado_sol__c),
          ISCHANGED(Precio_lado_sombra__c),
          ISCHANGED(Precio_sobre_avenida__c),
          ISCHANGED(Precio_superficie_excedente__c),
          ISCHANGED(Porcentaje_Precio_instalaciones__c),
          ISCHANGED(Porcentaje_Precio_esquina__c),
          ISCHANGED(Prcentaje_Precio_frente_area_municipal__c),
          ISCHANGED(Precio_frente_a_parque__c),
          ISCHANGED(Procentaje_Precio_lado_sol__c),
          ISCHANGED(Porcentaje_Precio_lado_sombra__c),
          ISCHANGED(Porcentaje_Precio_sobre_avenida__c),
          ISCHANGED(Porcentaje_Precio_Superficie_Excedente__c),
          ISCHANGED(Estatus_Proceso_de_Venta__c),
          ISCHANGED(Precio_Min_Solicitado__c),
          ISCHANGED(Ilimitado__c),
          ISCHANGED(Cantidad__c),
          ISCHANGED(Precio_Min_Autorizado__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>No es posible modificar una lista que esta en estatus &quot;Por Aprobar&quot; o &quot;Aprobada&quot;</errorMessage>
</ValidationRule>