unpackaged/main/default/objects/Pricebook2/validationRules/No_modificar_Activo.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_Activo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     OR( NOT($Profile.Name = &quot;System Administrator&quot;),
         NOT($RecordType.Name = &#39;Promoción Precio&#39;)),
         ISCHANGED(IsActive)
)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>El Check &quot;Activo&quot; es un campo automático que se activa cuando la lista de precios es aprobada.</errorMessage>
</ValidationRule>