unpackaged/main/default/objects/Pricebook2/validationRules/No_modificar_Precio_Min_AEC.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_Precio_Min_AEC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     $Profile.Name = &quot;AEC&quot;,
     $RecordType.Name = &#39;Promoción Precio&#39;,
     ISPICKVAL(Estatus__c , &#39;Aprobado&#39;),
     ISCHANGED(Precio_Min_Solicitado__c)
   )</errorConditionFormula>
    <errorDisplayField>Precio_Min_Solicitado__c</errorDisplayField>
    <errorMessage>No se pued modificar el Precio Minimo Solicitado cuando la lista ha sido aprobada.</errorMessage>
</ValidationRule>