unpackaged/main/default/objects/Pricebook2/validationRules/No_Se_Puede_Cambiar_Fracc_y_Prot.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Se_Puede_Cambiar_Fracc_y_Prot</fullName>
    <active>true</active>
    <description>Despues de creada la lista de precios no permite cambiar fraccionamiento y prototipo</description>
    <errorConditionFormula>OR(ISCHANGED( Fraccionamiento__c ) , ISCHANGED(  Prototipo__c ))</errorConditionFormula>
    <errorMessage>No es posible editar el Fraccionamiento y Prototipo despues de crear la Lista de Precios</errorMessage>
</ValidationRule>