unpackaged/main/default/objects/Pricebook2/validationRules/Valida_Ilimitado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Ilimitado</fullName>
    <active>false</active>
    <errorConditionFormula>IF( (ISCHANGED(Cantidad__c) || Cantidad__c &lt;&gt; 0) &amp;&amp; 
	   Ilimitado__c, 
	   TRUE, 
	   FALSE
	)</errorConditionFormula>
    <errorDisplayField>Cantidad__c</errorDisplayField>
    <errorMessage>La casilla de ilimitado esta marcada, por lo tanto, el campo de cantidad debe estar vacio. Favor de revisar.</errorMessage>
</ValidationRule>