unpackaged/main/default/objects/Pricebook2/validationRules/Validacion_area_municipal.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_area_municipal</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
    OR(Prcentaje_Precio_frente_area_municipal__c = 0, ISBLANK(Prcentaje_Precio_frente_area_municipal__c)), 
    OR(Precio_frente_area_municipal__c = 0, ISBLANK(Precio_frente_area_municipal__c))
   ), 
FALSE,
           
IF(
AND(
    Prcentaje_Precio_frente_area_municipal__c &gt; 0, 
    OR(Precio_frente_area_municipal__c = 0, ISBLANK(Precio_frente_area_municipal__c)) 
   ), 
FALSE,
                        
IF(
AND(
    OR(Prcentaje_Precio_frente_area_municipal__c = 0, ISBLANK(Prcentaje_Precio_frente_area_municipal__c)), 
       Precio_frente_area_municipal__c &gt; 0
   ), 
FALSE, 

TRUE)))</errorConditionFormula>
    <errorMessage>Se debe ingresar sólo un valor para Precio Frente área Municipal, ya sea porcentaje o monto</errorMessage>
</ValidationRule>