unpackaged/main/default/objects/Pricebook2/validationRules/Validacion_financiamiento_valores.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_financiamiento_valores</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
IF( TEXT(Clase_de_Financiamiento__c) = &#39;Porcentaje&#39; &amp;&amp; NOT(ISBLANK( Importe_Financiamiento__c)), true, false),
IF( TEXT(Clase_de_Financiamiento__c) = &#39;Importe&#39; &amp;&amp; NOT(ISBLANK(Porcentaje_Fianciamiento__c)), true, false),
AND(NOT(ISBLANK( Porcentaje_Fianciamiento__c)),NOT(ISBLANK(Importe_Financiamiento__c)))
)</errorConditionFormula>
    <errorMessage>Se debe ingresar sólo un valor de Financiamiento, ya sea porcentaje o monto, de acuerdo a la clase de financiamiento seleccionada.</errorMessage>
</ValidationRule>