unpackaged/main/default/objects/Pricebook2/validationRules/Validacion_frente_parque.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_frente_parque</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
    OR(Precio_frente_a_praque__c  = 0, ISBLANK(Precio_frente_a_praque__c)), 
    OR(Precio_frente_a_parque__c = 0, ISBLANK(Precio_frente_a_parque__c))
   ), 
FALSE,
           
IF(
AND(
    Precio_frente_a_praque__c  &gt; 0, 
    OR(Precio_frente_a_parque__c = 0, ISBLANK(Precio_frente_a_parque__c)) 
   ), 
FALSE,
                        
IF(
AND(
    OR(Precio_frente_a_praque__c = 0, ISBLANK(Precio_frente_a_praque__c )), 
       Precio_frente_a_parque__c &gt; 0
   ), 
FALSE, 

TRUE)))</errorConditionFormula>
    <errorMessage>Se debe ingresar sólo un valor para Precio Frente Parque, ya sea porcentaje o monto</errorMessage>
</ValidationRule>