unpackaged/main/default/objects/Pricebook2/validationRules/Validacion_lado_sombra.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_lado_sombra</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
    OR(Porcentaje_Precio_lado_sombra__c  = 0, ISBLANK(Porcentaje_Precio_lado_sombra__c)), 
    OR(Precio_lado_sombra__c = 0, ISBLANK(Precio_lado_sombra__c))
   ), 
FALSE,
           
IF(
AND(
    Porcentaje_Precio_lado_sombra__c  &gt; 0, 
    OR(Precio_lado_sombra__c = 0, ISBLANK(Precio_lado_sombra__c)) 
   ), 
FALSE,
                        
IF(
AND(
    OR(Porcentaje_Precio_lado_sombra__c = 0, ISBLANK(Porcentaje_Precio_lado_sombra__c )), 
       Precio_lado_sombra__c &gt; 0
   ), 
FALSE, 

TRUE)))</errorConditionFormula>
    <errorMessage>Se debe ingresar sólo un valor para Precio Lado Sombra, ya sea porcentaje o monto</errorMessage>
</ValidationRule>